# torch_onnx_deployment

./: CMakeLists.txt
onnx_inference/: CMakeLists.txt  main.cpp
torch2onnx/: run.py
